added playlist 2 vec with spacy

--- a/playlist2vec/Playlist2vec_search.ipynb
+++ b/playlist2vec/Playlist2vec_search.ipynb
@@ -2,14 +2,302 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 1,
    "id": "b1c66301",
    "metadata": {},
    "outputs": [],
    "source": [
     "from annoy import AnnoyIndex\n",
     "import numpy as np\n",
-    "import matplotlib.pyplot as plt"
+    "import matplotlib.pyplot as plt\n",
+    "import json\n",
+    "import pandas as pd\n",
+    "import spacy"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "46fc2abf",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "../spotify_million_playlist_dataset/data/mpd.slice.0-999.json\n"
+     ]
+    }
+   ],
+   "source": [
+    "# n is the number of json files we wish to read (max is 1000)\n",
+    "n = 1\n",
+    "\n",
+    "for i in range(1):\n",
+    "    # create the file_name string in order to read in file\n",
+    "    file_name = '../spotify_million_playlist_dataset/data/mpd.slice.0-999.json'\n",
+    "\n",
+    "    # Uncomment the following line to show progress\n",
+    "    print(file_name)\n",
+    "\n",
+    "    # open the file and store its contents in file_contents\n",
+    "    with open(file_name) as user_file:\n",
+    "        file_contents = user_file.read()\n",
+    "\n",
+    "    # we only care about the \"playlists\" part of this dictionary\n",
+    "    # save the list of playlists in playlist_list\n",
+    "    parsed_json = json.loads(file_contents)\n",
+    "    playlist_list = parsed_json[\"playlists\"]\n",
+    "\n",
+    "\n",
+    "    # create dataframe if it's first playlist, otherwise append info to existing dataframe\n",
+    "    # the record_path argument tells the json_normalize function how to flatten the data\n",
+    "    # the meta argument tells the json_nomralize function what meta data to keep\n",
+    "    if i == 0:\n",
+    "        data = pd.json_normalize(\n",
+    "            playlist_list,\n",
+    "            record_path=\"tracks\",\n",
+    "            meta=[\"name\", \"collaborative\", \"pid\", \"num_followers\", \"num_edits\"]\n",
+    "        )\n",
+    "    else:\n",
+    "        data = pd.concat(\n",
+    "            [\n",
+    "                data,\n",
+    "                pd.json_normalize(\n",
+    "                    playlist_list,\n",
+    "                    record_path=\"tracks\",\n",
+    "                    meta=[\"name\", \"collaborative\", \"pid\", \"num_followers\", \"num_edits\"]\n",
+    "                )\n",
+    "            ],\n",
+    "            ignore_index = True\n",
+    "        )\n",
+    "\n",
+    "# For some reason reading in the data creates a new column called pos so I delete it here\n",
+    "data =data.drop(columns=['pos'])\n",
+    "\n",
+    "\n",
+    "P_names =data['name'].unique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "35e6e34a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Throwbacks',\n",
+       " 'tb',\n",
+       " 'SB',\n",
+       " 'w o r k o u t',\n",
+       " 'English ',\n",
+       " '🤤🤤',\n",
+       " 'running ',\n",
+       " 'lit',\n",
+       " 'randoms',\n",
+       " \"Feelin' Myself\",\n",
+       " 'throw backs',\n",
+       " 'old songs ',\n",
+       " 'Guilty pleasure',\n",
+       " 'Throwbacks ',\n",
+       " 'West Coast Swing',\n",
+       " 'Wedding Dance Party',\n",
+       " 'smooth jams',\n",
+       " 'bounce',\n",
+       " '2000s',\n",
+       " '00s',\n",
+       " 'Main Playlist',\n",
+       " '💸💸',\n",
+       " 'WORKOUT',\n",
+       " 'pregame',\n",
+       " 'Camp',\n",
+       " 'nostalgia',\n",
+       " 'LITT ']"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Beyonce_playlists = data.loc[data['track_uri']=='spotify:track:0WqIKmW4BTrj3eJFmnCKMv']\n",
+    "Beyonce_playlists_name = list(Beyonce_playlists['name']) \n",
+    "\n",
+    "Beyonce_playlists_name\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8d0469cf",
+   "metadata": {},
+   "source": [
+    "# generating playlist vectors"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "d368ab5b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "nlp = spacy.load('en_core_web_lg')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "f834f192",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "p_vec = []\n",
+    "\n",
+    "for p in Beyonce_playlists_name:\n",
+    "    doc = nlp(p)\n",
+    "    \n",
+    "    v = np.zeros(300)\n",
+    "    for token in doc:\n",
+    "        v = v + token.vector\n",
+    "        #print(token.text)\n",
+    "        \n",
+    "    p_vec.append(v)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "id": "bc25e228",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def cosine_similarity(v1,v2):\n",
+    "    \"compute cosine similarity of v1 to v2: (v1 dot v2)/{||v1||*||v2||)\"\n",
+    "    sumxx, sumxy, sumyy = 0, 0, 0\n",
+    "    for i in range(len(v1)):\n",
+    "        x = v1[i]; y = v2[i]\n",
+    "        sumxx += x*x\n",
+    "        sumyy += y*y\n",
+    "        sumxy += x*y\n",
+    "        \n",
+    "    if sumxx*sumyy == 0:\n",
+    "        return 0\n",
+    "    return sumxy/(sumxx*sumyy)**.5\n",
+    "\n",
+    "def pairwise_cosine_similarity(list_of_vectors):\n",
+    "    v = list_of_vectors\n",
+    "    n = len(v)\n",
+    "    \n",
+    "    similarities = []\n",
+    "    \n",
+    "    for i in range(n):\n",
+    "        for j in range(i+1, n):\n",
+    "            sim = cosine_similarity(v[i],v[j])\n",
+    "            \n",
+    "            similarities.append((sim, i, j))\n",
+    "            \n",
+    "    similarities.sort()\n",
+    "    \n",
+    "    return similarities"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "id": "1ccc1246",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "p_sim =pairwise_cosine_similarity(p_vec)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c044858d",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "id": "8935d57e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.0\n",
+      "Throwbacks\n",
+      "Throwbacks \n",
+      "\n",
+      "0.5734944806334178\n",
+      "throw backs\n",
+      "bounce\n",
+      "\n",
+      "0.5468616601606248\n",
+      "running \n",
+      "throw backs\n",
+      "\n",
+      "0.41638402983391415\n",
+      "Wedding Dance Party\n",
+      "Main Playlist\n",
+      "\n",
+      "0.41264760842573234\n",
+      "Throwbacks \n",
+      "nostalgia\n",
+      "\n",
+      "0.41264760842573234\n",
+      "Throwbacks\n",
+      "nostalgia\n",
+      "\n",
+      "0.39472216550987926\n",
+      "West Coast Swing\n",
+      "Main Playlist\n",
+      "\n",
+      "0.3907923882251679\n",
+      "West Coast Swing\n",
+      "Wedding Dance Party\n",
+      "\n",
+      "0.3843840147194541\n",
+      "tb\n",
+      "w o r k o u t\n",
+      "\n",
+      "0.3632399591308034\n",
+      "2000s\n",
+      "00s\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(10):\n",
+    "    print(p_sim[-(1+i)][0])\n",
+    "    print(Beyonce_playlists_name[p_sim[-(1+i)][1]])\n",
+    "    print(Beyonce_playlists_name[p_sim[-(1+i)][2]])\n",
+    "    print()\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0bcc5328",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9718f927",
+   "metadata": {},
+   "source": [
+    "# Searching vectors"
    ]
   },
   {
