--- a/matrix_factorization/matrix_factorization.ipynb
+++ b/matrix_factorization/matrix_factorization.ipynb
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {
     "id": "JZtDAeafHyXf"
    },
@@ -37,7 +37,8 @@
     "import pandas as pd\n",
     "import json\n",
     "import copy\n",
-    "import random"
+    "import random\n",
+    "from numba import njit"
    ]
   },
   {
@@ -51,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -111,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 6,
    "metadata": {
     "id": "fPke0KhzHyXh"
    },
@@ -187,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -213,7 +214,7 @@
     "    pid_dict = make_pid_dict(df)\n",
     "    for index , row in df.iterrows():\n",
     "        result.append((pid_dict[row['pid']], track_dict[row['track_uri']]))\n",
-    "    return result\n",
+    "    return np.array(result)\n",
     "\n",
     "# create the R_list for grandma's hypothesis method.  As coded top 20% gets 2 instead of 1.\n",
     "def make_R_list_grandma(df):\n",
@@ -236,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -273,47 +274,30 @@
     "        newQ[i,:] -= alpha * 2 * llambda * Q[i,:]\n",
     "    return (newP, newQ)\n",
     "\n",
-    "# treat missing top 1000 songs as 0's and also include z random 0's per playlist\n",
-    "def update_params_loop_zeros(R_list, P, Q, alpha, llambda, z):\n",
-    "    newP = P\n",
-    "    newQ = Q\n",
-    "    m , f = np.shape(P)\n",
-    "    n = np.shape(Q)[0]\n",
+    "# Run an epoch of gradient descent where the iterations parameter is the number of iterations.\n",
+    "@njit\n",
+    "def run_epoch(R_array, P, Q, alpha, llambda, iterations):\n",
+    "    oldP = P.copy()\n",
+    "    oldQ = Q.copy()\n",
+    "    f = np.shape(P)[1]\n",
     "\n",
-    "    u_current = 0\n",
-    "    u_set = set()\n",
+    "    for iter in range(iterations):\n",
+    "        newP = oldP.copy()\n",
+    "        newQ = oldQ.copy()\n",
+    "        for u,i in R_array:\n",
+    "            dotprod = 0\n",
+    "            for feature in range(f):\n",
+    "                dotprod += oldP[u,feature] * oldQ[i,feature]\n",
+    "            error = dotprod - 1\n",
     "\n",
-    "    for u,i in R_list:\n",
-    "\n",
-    "        # Do the usual gd update\n",
-    "        if u_current == u: \n",
-    "            newP[u,:] -= alpha * 2 * (P[u,:] @ Q[i,:] - 1) * Q[i,:]\n",
-    "            newQ[i,:] -= alpha * 2 * (P[u,:] @ Q[i,:] - 1) * P[u,:]\n",
-    "            u_set.add(i) # keep track of songs in the playlist\n",
-    "        else: \n",
-    "            rand_song_list = [random.randint(0,n-1) for a in range(z)] # Get list of z random songs\n",
-    "            #rand_song_set = set(rand_song_list)\n",
-    "\n",
-    "            for song in rand_song_list: # Treat these random songs as 0's for this playlist and do gd update\n",
-    "                if song not in u_set:\n",
-    "                    newP[u,:] -= alpha * 2 * (P[u,:] @ Q[song,:]) * Q[song,:]\n",
-    "                    newQ[song,:] -= alpha * 2 * (P[u,:] @ Q[song,:]) * P[u,:]\n",
-    "            # for song in top_1000: # Treat songs missing from the top 1000 as 0's\n",
-    "            #     if song not in u_set and song not in rand_song_set:\n",
-    "            #         newP[u,:] -= alpha * 2 * (P[u,:] @ Q[song,:]) * Q[song,:]\n",
-    "            #         newQ[song,:] -= alpha * 2 * (P[u,:] @ Q[song,:]) * P[u,:]\n",
-    "\n",
-    "            newP[u,:] -= alpha * 2 * (P[u,:] @ Q[i,:] - 1) * Q[i,:]\n",
-    "            newQ[i,:] -= alpha * 2 * (P[u,:] @ Q[i,:] - 1) * P[u,:]\n",
-    "            u_current = u\n",
-    "            u_set = set([i])\n",
-    "\n",
-    "    # Regularization\n",
-    "    for u in range(m):\n",
-    "        newP[u,:] -= alpha * 2 * llambda * P[u,:]\n",
-    "    for i in range(n):\n",
-    "        newQ[i,:] -= alpha * 2 * llambda * Q[i,:]\n",
-    "    return (newP, newQ)\n",
+    "            for feature in range(f):\n",
+    "                pf = oldP[u,feature]\n",
+    "                qf = oldQ[i,feature]\n",
+    "                newP[u,feature] -= alpha * (error * qf + llambda * pf) \n",
+    "                newQ[i,feature] -= alpha * (error * pf + llambda * qf)\n",
+    "        oldP = newP\n",
+    "        oldQ = newQ\n",
+    "    return newP, newQ\n",
     "\n",
     "\n",
     "#runs the gradient descent loop in batches\n",
@@ -347,6 +331,15 @@
     "    for row, col in R_list:\n",
     "        result = result + (R[row,col] - P[row,:]@Q[col,:])**2\n",
     "\n",
+    "    return result\n",
+    "\n",
+    "@njit\n",
+    "def error_function_l2( R_list, P , Q, llambda):\n",
+    "    result = 0\n",
+    "    #sum over R_list\n",
+    "    for row, col in R_list:\n",
+    "        result = result + (1 - P[row,:]@Q[col,:])**2\n",
+    "    result += llambda * (np.linalg.norm(P)**2 + np.linalg.norm(Q)**2)\n",
     "    return result"
    ]
   },
@@ -354,12 +347,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The function for obtaining the playlist vector that minimizes the cost function for a fixed $Q$ from a list of track id's. Note, to use this, the song list must have at least $f$ songs where $f$ is the number of latent features."
+    "The function for obtaining the playlist vector that minimizes the cost function for a fixed $Q$ from a list of track id's."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -367,7 +360,7 @@
     "    Y = Q[tid_list,:]\n",
     "    f = np.shape(Q)[1]\n",
     "    d = len(tid_list)\n",
-    "    vec = np.linalg.inv(np.transpose(Y) @ Y + llambda * np.identity(1)) @ np.transpose(Y) @ np.ones((d,1))\n",
+    "    vec = np.linalg.inv(np.transpose(Y) @ Y + llambda * np.identity(f)) @ np.transpose(Y) @ np.ones((d,1))\n",
     "    return np.transpose(vec)"
    ]
   },
@@ -377,142 +370,199 @@
     "id": "mRfZHGotHyXh"
    },
    "source": [
-    "# Running the Model"
+    "# Example of training the Model"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The next two cells read in data and creates the list of data points.  Ideally this will be done by querying the SQL database."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 10,
    "metadata": {
     "id": "YhJsEpFdHyXi"
    },
    "outputs": [],
    "source": [
     "num_jsons = 20 # number of files to read\n",
-    "data = read_data(num_jsons)\n"
+    "data = read_data(num_jsons)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
     "R_list = make_R_list(data)\n",
     "track_dict = make_track_dict(data)\n",
-    "reverse_track_dict = make_reverse_track_dict(data)\n",
-    "sorted_tid_list = make_sorted_tid_list(R_list)"
+    "reverse_track_dict = make_reverse_track_dict(data)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Next, we specify the number of features and create matrices $P$ and $Q$ whose entries are randomly taken from a normal distribution with $\\mu = 0$ and $\\sigma = 0.1$."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
-    "f = 7 # number of latent features\n",
+    "f = 10 # number of latent features\n",
     "num_songs = max(reverse_track_dict.keys()) + 1\n",
     "num_playlists = num_jsons*1000\n",
     "\n",
     "\n",
     "# initialize random values for matrices P and Q. Entries are between -1 and 1\n",
-    "P = np.random.rand(num_playlists, f) * 2 - 1\n",
-    "Q = np.random.rand(num_songs, f) * 2 - 1"
+    "P = np.random.normal(0, 0.1, (num_playlists, f))\n",
+    "Q = np.random.normal(0, 0.1, (num_songs, f))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In the following cell, we run the gradient descent algorithm and store the resulting matrices in P_trained and Q_trained."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 13,
    "metadata": {
     "id": "b_nyoRWcHyXi"
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0, 1, 2, 3, Unexpected exception formatting exception. Falling back to standard exception\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Traceback (most recent call last):\n",
-      "  File \"C:\\Users\\Dane\\AppData\\Roaming\\Python\\Python311\\site-packages\\IPython\\core\\interactiveshell.py\", line 3548, in run_code\n",
-      "    exec(code_obj, self.user_global_ns, self.user_ns)\n",
-      "  File \"C:\\Users\\Dane\\AppData\\Local\\Temp\\ipykernel_24436\\2788256200.py\", line 7, in <module>\n",
-      "    P_current , Q_current = update_params_loop_zeros(R_list, P_current, Q_current, 0.1, 0.25, 1000)\n",
-      "                            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
-      "  File \"C:\\Users\\Dane\\AppData\\Local\\Temp\\ipykernel_24436\\1334580116.py\", line -1, in update_params_loop_zeros\n",
-      "KeyboardInterrupt\n",
-      "\n",
-      "During handling of the above exception, another exception occurred:\n",
-      "\n",
-      "Traceback (most recent call last):\n",
-      "  File \"C:\\Users\\Dane\\AppData\\Roaming\\Python\\Python311\\site-packages\\IPython\\core\\interactiveshell.py\", line 2142, in showtraceback\n",
-      "    stb = self.InteractiveTB.structured_traceback(\n",
-      "          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
-      "  File \"C:\\Users\\Dane\\AppData\\Roaming\\Python\\Python311\\site-packages\\IPython\\core\\ultratb.py\", line 1435, in structured_traceback\n",
-      "    return FormattedTB.structured_traceback(\n",
-      "           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
-      "  File \"C:\\Users\\Dane\\AppData\\Roaming\\Python\\Python311\\site-packages\\IPython\\core\\ultratb.py\", line 1326, in structured_traceback\n",
-      "    return VerboseTB.structured_traceback(\n",
-      "           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
-      "  File \"C:\\Users\\Dane\\AppData\\Roaming\\Python\\Python311\\site-packages\\IPython\\core\\ultratb.py\", line 1173, in structured_traceback\n",
-      "    formatted_exception = self.format_exception_as_a_whole(etype, evalue, etb, number_of_lines_of_context,\n",
-      "                          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
-      "  File \"C:\\Users\\Dane\\AppData\\Roaming\\Python\\Python311\\site-packages\\IPython\\core\\ultratb.py\", line 1088, in format_exception_as_a_whole\n",
-      "    frames.append(self.format_record(record))\n",
-      "                  ^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
-      "  File \"C:\\Users\\Dane\\AppData\\Roaming\\Python\\Python311\\site-packages\\IPython\\core\\ultratb.py\", line 970, in format_record\n",
-      "    frame_info.lines, Colors, self.has_colors, lvals\n",
-      "    ^^^^^^^^^^^^^^^^\n",
-      "  File \"C:\\Users\\Dane\\AppData\\Roaming\\Python\\Python311\\site-packages\\IPython\\core\\ultratb.py\", line 792, in lines\n",
-      "    return self._sd.lines\n",
-      "           ^^^^^^^^^^^^^^\n",
-      "  File \"C:\\Users\\Dane\\AppData\\Roaming\\Python\\Python311\\site-packages\\stack_data\\utils.py\", line 145, in cached_property_wrapper\n",
-      "    value = obj.__dict__[self.func.__name__] = self.func(obj)\n",
-      "                                               ^^^^^^^^^^^^^^\n",
-      "  File \"C:\\Users\\Dane\\AppData\\Roaming\\Python\\Python311\\site-packages\\stack_data\\core.py\", line 734, in lines\n",
-      "    pieces = self.included_pieces\n",
-      "             ^^^^^^^^^^^^^^^^^^^^\n",
-      "  File \"C:\\Users\\Dane\\AppData\\Roaming\\Python\\Python311\\site-packages\\stack_data\\utils.py\", line 145, in cached_property_wrapper\n",
-      "    value = obj.__dict__[self.func.__name__] = self.func(obj)\n",
-      "                                               ^^^^^^^^^^^^^^\n",
-      "  File \"C:\\Users\\Dane\\AppData\\Roaming\\Python\\Python311\\site-packages\\stack_data\\core.py\", line 681, in included_pieces\n",
-      "    pos = scope_pieces.index(self.executing_piece)\n",
-      "                             ^^^^^^^^^^^^^^^^^^^^\n",
-      "  File \"C:\\Users\\Dane\\AppData\\Roaming\\Python\\Python311\\site-packages\\stack_data\\utils.py\", line 145, in cached_property_wrapper\n",
-      "    value = obj.__dict__[self.func.__name__] = self.func(obj)\n",
-      "                                               ^^^^^^^^^^^^^^\n",
-      "  File \"C:\\Users\\Dane\\AppData\\Roaming\\Python\\Python311\\site-packages\\stack_data\\core.py\", line 660, in executing_piece\n",
-      "    return only(\n",
-      "           ^^^^^\n",
-      "  File \"C:\\Users\\Dane\\AppData\\Roaming\\Python\\Python311\\site-packages\\executing\\executing.py\", line 116, in only\n",
-      "    raise NotOneValueFound('Expected one value, found 0')\n",
-      "executing.executing.NotOneValueFound: Expected one value, found 0\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# Run the gradient descent algorithm\n",
-    "P_current = P.copy()\n",
-    "Q_current = Q.copy()\n",
-    "for i in range(100):\n",
-    "    if i % 1 == 0:\n",
-    "        print(i, end = ', ')\n",
-    "    P_current , Q_current = update_params_loop_zeros(R_list, P_current, Q_current, 0.1, 0.25, 1000)"
+    "# Run gradient descent algorithm with alpha = 0.001, llambda = 0.005 for 100 iterations\n",
+    "P_trained, Q_trained = run_epoch(R_list, P, Q, 0.001, 0.005, 100)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Example of computing error on non-training data"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now, to demonstrate how to compute error for a new collection of playlists, let's first read in an extra json file's worth of data (I could've just read in the single extra file instead of all original files again but I was too lazy to change the read_data function). Again this step should utilize the SQL database."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {
     "id": "juN8npsfHyXj"
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "data1 = read_data(num_jsons+1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# The list of data points corresponding to our extra json file\n",
+    "R_list_new = np.array([(u,i) for u,i in make_R_list(data1) if u >= num_jsons*1000])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "For our fixed Q, given a list of (new) playlist ids, we can compute the P matrix that minimizes the "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# THIS FUNCTION, (as well as new_user_vec) CAN AND SHOULD BE OPTIMIZED TO USE numba.  \n",
+    "# For the sake of time, I'll leave it as is for now\n",
+    "# If we can avoid using lists (like tid_list), then things will be numba compatible. \n",
+    "def make_Pval(pid_list, R_list_new, Q, llambda):\n",
+    "    num_songs , f = np.shape(Q)\n",
+    "    P_val = np.zeros((len(new_pids), f))\n",
+    "    count = 0 # keeps track of where in pid_list we are\n",
+    "    for pid in pid_list:\n",
+    "\n",
+    "        # create list of tracks in the playlist\n",
+    "        tid_list = []\n",
+    "        for u , i in R_list_new:\n",
+    "            # need to check that the tid exists in our train set. \n",
+    "            # Note if the train set is randomized (as opposed to the first n jsons), the i < num_songs condition may need to be changed.\n",
+    "            if u == pid and i < num_songs:\n",
+    "                tid_list.append(i)\n",
+    "            if u > pid:\n",
+    "                break\n",
+    "\n",
+    "        # x is the row of Pval corresponding to this pid\n",
+    "        x = new_user_vec(tid_list, Q_trained, 0.005)\n",
+    "        for feature in range(f):\n",
+    "            P_val[count, feature] = x[0,feature]\n",
+    "        count += 1\n",
+    "        \n",
+    "    return P_val\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "new_pids = list(range(num_jsons * 1000, (num_jsons + 1) * 1000 ))\n",
+    "Pval = make_Pval(new_pids, R_list_new, Q_trained, 0.005)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Next, we compute the error function on this set. Note, we can't use the function defined at the top of this document because now the pid does not correspond to the index of the column of Pval."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "13688.07424182042"
+      ]
+     },
+     "execution_count": 69,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def val_error(R_list_new, pid_list, Pval, Q, llambda):\n",
+    "    num_songs, f = np.shape(Q)\n",
+    "    result = 0\n",
+    "    for pid, tid in R_list_new:\n",
+    "        # As in the make_Pval function, the following condition needs to be changed for a randomized val set.\n",
+    "        if tid < num_songs:\n",
+    "            result += (1 - Pval[pid_list.index(pid), :] @ Q[tid, :])\n",
+    "    result += llambda * (np.linalg.norm(Pval)**2)\n",
+    "    return result\n",
+    "\n",
+    "val_error(R_list_new, new_pids, Pval, Q_trained, 0.005)"
+   ]
   },
   {
    "cell_type": "code",
