added variable length to pid_nns

--- a/playlist2vec/searching_vectors.ipynb
+++ b/playlist2vec/searching_vectors.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 1,
    "id": "177d8b95",
    "metadata": {},
    "outputs": [],
@@ -17,81 +17,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
-   "id": "cf462012",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# n is the number of json files we wish to read (max is 1000)\n",
-    "n = 5\n",
-    "\n",
-    "for i in range(n):\n",
-    "    # create the file_name string in order to read in file\n",
-    "    file_name = 'spotify_million_playlist_dataset/data/mpd.slice.' \\\n",
-    "        + str(i*1000) \\\n",
-    "        + '-' + str(i*1000+999) + '.json'\n",
-    "\n",
-    "    # Uncomment the following line to show progress\n",
-    "    #print(file_name)\n",
-    "\n",
-    "    # open the file and store its contents in file_contents\n",
-    "    with open(file_name) as user_file:\n",
-    "        file_contents = user_file.read()\n",
-    "\n",
-    "    # we only care about the \"playlists\" part of this dictionary\n",
-    "    # save the list of playlists in playlist_list\n",
-    "    parsed_json = json.loads(file_contents)\n",
-    "    playlist_list = parsed_json[\"playlists\"]\n",
-    "\n",
-    "\n",
-    "    # create dataframe if it's first playlist, otherwise append info to existing dataframe\n",
-    "    # the record_path argument tells the json_normalize function how to flatten the data\n",
-    "    # the meta argument tells the json_nomralize function what meta data to keep\n",
-    "    if i == 0:\n",
-    "        data = pd.json_normalize(\n",
-    "            playlist_list,\n",
-    "            record_path=\"tracks\",\n",
-    "            meta=[\"name\", \"collaborative\", \"pid\", \"num_followers\", \"num_edits\"]\n",
-    "        )\n",
-    "    else:\n",
-    "        data = pd.concat(\n",
-    "            [\n",
-    "                data,\n",
-    "                pd.json_normalize(\n",
-    "                    playlist_list,\n",
-    "                    record_path=\"tracks\",\n",
-    "                    meta=[\"name\", \"collaborative\", \"pid\", \"num_followers\", \"num_edits\"]\n",
-    "                )\n",
-    "            ],\n",
-    "            ignore_index = True\n",
-    "        )"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 68,
    "id": "348acc4f",
    "metadata": {},
    "outputs": [],
    "source": [
-    "f=384\n",
+    "f=model.get_sentence_embedding_dimension()\n",
     "\n",
     "t= AnnoyIndex(f, 'angular')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 69,
    "id": "71cfd17e",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "5000"
+       "1000000"
       ]
      },
-     "execution_count": 126,
+     "execution_count": 69,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -111,119 +59,80 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 172,
+   "execution_count": 95,
    "id": "94823ced",
    "metadata": {},
    "outputs": [],
    "source": [
-    "search = 'tropical'\n",
-    "\n",
-    "#generate search vector\n",
-    "#note that i am adding the suffix playlist to everything\n",
-    "v_search = model.encode(search.lower())"
+    "search = 'workout'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 173,
+   "execution_count": 96,
+   "id": "04b0cee8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#function takes in a string and out puts pid's in a list\n",
+    "#the size of the output list is variable\n",
+    "#if there are many results which match the query exactly then it will increase the size of the list\n",
+    "def search_playlist_titles(query):\n",
+    "    #generate search vector\n",
+    "    v_search = model.encode(search.lower())\n",
+    "    \n",
+    "    pid_nns, dist = t.get_nns_by_vector(v_search, 10000, search_k = 100000, include_distances = True )\n",
+    "    \n",
+    "    #find first nonzero distance\n",
+    "    i = 0 \n",
+    "    while dist[i] == 0.0:\n",
+    "        i = i +1\n",
+    "\n",
+    "    if i < 25:\n",
+    "        return pid_nns[:25]\n",
+    "    else:\n",
+    "        return pid_nns[:i]\n",
+    "    \n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 100,
    "id": "a1642ae7",
    "metadata": {
     "scrolled": true
    },
    "outputs": [],
    "source": [
-    "#will return the approximate nearest neighbors\n",
-    "#pid's to the search vector\n",
-    "#the order of this list is important: roughly ~ closest -> furthest \n",
-    "num_neigh= 50\n",
-    "pid_nns = t.get_nns_by_vector(v_search , num_neigh)"
+    "pid_nns = search_playlist_titles(search)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 174,
-   "id": "a06232fc",
+   "execution_count": 101,
+   "id": "e5b62c30",
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "df = data.drop_duplicates(subset = ['pid'])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 175,
-   "id": "977e88cc",
-   "metadata": {
-    "scrolled": true
-   },
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Tropical\n",
-      "Tropical\n",
-      "TROPICAL\n",
-      "tropical\n",
-      "Tropicales\n",
-      "Tropics\n",
-      "Cuba\n",
-      "Tropicana\n",
-      "Fiji\n",
-      "Paradise\n",
-      "VACATION\n",
-      "Country summer\n",
-      "country summer \n",
-      "summer country\n",
-      "Summer Country\n",
-      "Summer country\n",
-      "Summer Country\n",
-      "Summer Country\n",
-      "summer country\n",
-      "summer country\n",
-      "COSTA RICA \n",
-      "Hawaiian\n",
-      "Hawaii\n",
-      "hawaii\n",
-      "Hawaii \n",
-      "HAWAII\n",
-      "Island\n",
-      "ISLAND\n",
-      "Around the World\n",
-      "Sky\n",
-      "beach\n",
-      "Beach\n",
-      "beach\n",
-      "Beach\n",
-      "Beach\n",
-      "thai\n",
-      "Disneyland\n",
-      "Florida\n",
-      "Maui\n",
-      "Panda\n",
-      "panda\n",
-      "Panda\n",
-      "rainy days\n",
-      "Rainy Days\n",
-      "Rainy days\n",
-      "Acústico\n",
-      "Acústico \n",
-      "Country\n",
-      "Country\n",
-      "Country\n"
-     ]
+     "data": {
+      "text/plain": [
+       "8343"
+      ]
+     },
+     "execution_count": 101,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "for pid in pid_nns:\n",
-    "    name = list(df.loc[df['pid']== pid,'name'])[0]\n",
-    "    print(name)"
+    "len(pid_nns)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e5b62c30",
+   "id": "81b80c22",
    "metadata": {},
    "outputs": [],
    "source": []
