builds annoy db from SQL

--- a/playlist2vec/playlist2vec.ipynb
+++ b/playlist2vec/playlist2vec.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "id": "6c2bfaa2-2b3b-4567-b22d-64bf89c074aa",
    "metadata": {},
    "outputs": [],
@@ -33,75 +33,10 @@
     "import json\n",
     "import copy\n",
     "import time\n",
+    "import sqlalchemy as db\n",
     "from annoy import AnnoyIndex\n",
     "from sentence_transformers import SentenceTransformer\n",
     "model = SentenceTransformer('all-MiniLM-L6-v2')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "id": "2304a7f1-d7c5-4778-8f08-f150831880ac",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n",
-    "# n is the number of json files we wish to read (max is 1000)\n",
-    "n = 5\n",
-    "\n",
-    "for i in range(n):\n",
-    "    # create the file_name string in order to read in file\n",
-    "    file_name = 'spotify_million_playlist_dataset/data/mpd.slice.' \\\n",
-    "        + str(i*1000 ) \\\n",
-    "        + '-' + str(i*1000+999) + '.json'\n",
-    "\n",
-    "    # Uncomment the following line to show progress\n",
-    "    #print(file_name)\n",
-    "\n",
-    "    # open the file and store its contents in file_contents\n",
-    "    with open(file_name) as user_file:\n",
-    "        file_contents = user_file.read()\n",
-    "\n",
-    "    # we only care about the \"playlists\" part of this dictionary\n",
-    "    # save the list of playlists in playlist_list\n",
-    "    parsed_json = json.loads(file_contents)\n",
-    "    playlist_list = parsed_json[\"playlists\"]\n",
-    "\n",
-    "\n",
-    "    # create dataframe if it's first playlist, otherwise append info to existing dataframe\n",
-    "    # the record_path argument tells the json_normalize function how to flatten the data\n",
-    "    # the meta argument tells the json_nomralize function what meta data to keep\n",
-    "    if i == 0:\n",
-    "        data = pd.json_normalize(\n",
-    "            playlist_list,\n",
-    "            record_path=\"tracks\",\n",
-    "            meta=[\"name\", \"collaborative\", \"pid\", \"num_followers\", \"num_edits\"]\n",
-    "        )\n",
-    "    else:\n",
-    "        data = pd.concat(\n",
-    "            [\n",
-    "                data,\n",
-    "                pd.json_normalize(\n",
-    "                    playlist_list,\n",
-    "                    record_path=\"tracks\",\n",
-    "                    meta=[\"name\", \"collaborative\", \"pid\", \"num_followers\", \"num_edits\"]\n",
-    "                )\n",
-    "            ],\n",
-    "            ignore_index = True\n",
-    "        )"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "id": "8177d43d",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "## make copy of data to prevent any funny business\n",
-    "df = data.copy()\n",
-    "## drop duplicate pid as well\n",
-    "df = df.drop_duplicates(subset = ['pid'])"
    ]
   },
   {
@@ -114,42 +49,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 4,
+   "id": "01403eea",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "####use SQL to generate a list of pid's in training set\n",
+    "pid_train = []"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "id": "0b8b52f2",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "32.310036420822144\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "#Building the database here\n",
-    "#make vectors using sentence transformer\n",
-    "#load vectors into annoy index along with pid\n",
-    "t0 = time.time()\n",
-    "\n",
     "#dimension of vectors the model uses\n",
     "f = model.get_sentence_embedding_dimension()\n",
     "\n",
     "#build database we will load vectors in\n",
     "#angular means we are using cosine similarty metric\n",
-    "t = AnnoyIndex(f , 'angular')\n",
-    "\n",
-    "for (_,name,pid) in df[['name', 'pid']].itertuples(name=None):\n",
-    "    v = model.encode(name.lower().strip() )\n",
-    "    t.add_item(pid , v)\n",
-    "\n",
-    "#number of trees for search\n",
-    "t.build(100)\n",
-    "t.save('playlist_vectors.ann')\n",
-    "\n",
-    "t1 =time.time()\n",
-    "\n",
-    "print(t1-t0)"
+    "t = AnnoyIndex(f , 'angular')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "f6c3f89e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for pid in pid_train:\n",
+    "    #use SQL to pull name of playlist of given pid\n",
+    "    #store in the variable name pid_name\n",
+    "    pid_name \n",
+    "    \n",
+    "    #construct vector from playlist name\n",
+    "    v = model.encode(pid_name.lower().strip())\n",
+    "    \n",
+    "    #add playlist to annot\n",
+    "    t.add_item(pid, v)"
    ]
   },
   {
@@ -158,7 +98,11 @@
    "id": "4daf1e40",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#number of trees for search\n",
+    "t.build(100)\n",
+    "t.save('playlist_vectors.ann')"
+   ]
   }
  ],
  "metadata": {
